sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: reassignment to val
		stop = true;
                     ^AlgBubbleSort1:10: error: reassignment to val
				stop = false;
                                     ^